# NetMon

./: .SRCINFO  .gitignore  CHANGELOG.md  MEMORY.md  PKGBUILD  README.md  netmon-gui.desktop  netmon-gui.sh  netmon.desktop  netmon.install  pyproject.toml
python-speedtest/: PKGBUILD
src/netmon/: __init__.py  __main__.py  main.py
src/netmon/core/: backend.py  quota_manager.py  state_manager.py  workers.py
src/netmon/ui/: __init__.py  main_window.py  theme.py  theme_manager.py
src/netmon/ui/bandwidth/: __init__.py  view.py
src/netmon/ui/connections/: __init__.py  view.py
src/netmon/ui/dashboard/: __init__.py  view.py
src/netmon/ui/network_details/: view.py
src/netmon/ui/quota/: view.py
src/netmon/ui/settings/: dialog.py
src/netmon/ui/speedtest/: __init__.py  view.py
src/netmon/ui/widgets/: modern_chart.py  privilege_banner.py  quota_card.py  skeleton.py  stat_card.py
