[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netmon"
version = "2.0.0"
description = "Modern PySide6 network monitor: speed test, bandwidth, connections, and open ports for Arch Linux"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "psutil>=5.9.0",
    "PySide6>=6.5.0",
    "speedtest-cli>=2.1.3",
    "pyqtgraph>=0.14.0",
    "PySide6-Fluent-Widgets>=1.11.0",
]

[project.gui-scripts]
netmon = "netmon.main:main"

[tool.setuptools.packages.find]
where = ["src"]
